# lethe

./: .gitignore  LICENSE  README.md  input.txt  pyproject.toml  scratch.py
cryptoshred/: cli.py
cryptoshred/crypto/: aesgcm.py
cryptoshred/files/: shredder.py  verify.py
keys/: key_manager.py
tests/: test_crypto_aesgcm.py  test_key_manager.py  test_shred_file.py  test_verify_file.py
