[project]
name = "lethe"
version = "0.1.0"
description = "Cryptographic erasure via irreversible key destruction"
authors = [
    {name = "Saad Ur Rehman"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
